--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -23,7 +23,12 @@
 	}
 
 	h1 {
-		font-size: 80px;
+		font-size: 50px;
+		text-align: center;
+	}
+
+	h4 {
+		font-size: 20px;
 	}
 
 	.description {
@@ -48,10 +53,12 @@
 		}
 
 		.circle {
+			margin-left: -50px;
 			height: 60vw;
 			width: 60vw;
-			top: 19vw;
-			left: 8vw;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
 		}
 	}
 
@@ -77,6 +84,36 @@
 		}
 	}
 
+	.sectors {
+		&__imgs {
+			* {
+				opacity: 0.05;
+			}
+
+			.first {
+				@include imagesPositioningTopLeft(30%, -10%);
+				height: 200px;
+			}
+
+			.second {
+				@include imagesPositioningTopRight(
+					70%,
+					-5%,
+					$transform: rotate(-45deg)
+				);
+				height: 100px;
+			}
+
+			.third {
+				@include imagesPositioningTopRight(
+					80px,
+					0%,
+					$transform: rotate(-15deg)
+				);
+			}
+		}
+	}
+
 	.contact {
 		padding: 0px 30px 0px 40vw;
 	}
@@ -98,7 +135,6 @@
 
 @include media(1024) {
 	.header {
-		position: fixed;
 		z-index: 23;
 		background-color: $color_blue;
 
@@ -330,7 +366,7 @@
 	}
 
 	h1 {
-		font-size: 60px;
+		font-size: 50px;
 		line-height: 80px;
 	}
 
